@@ -38,7 +38,7 @@ class FilterWheel (BasicLifeCycle, IFilterWheel):
         self.drv = self.manager.getDriver(self.config.driver)
 
         if not self.drv:
-            logging.debug("Couldn't load selected driver (%ss)." %  self.config.driver)
+            logging.debug("Couldn't load selected driver (%s)." %  self.config.driver)
             return False
 
         # connect events
