@@ -1,3 +1,10 @@
+2007-07-11  P. Henrique Silva  <henrique@astro.ufsc.br>
+
+	* src/chimera/controllers/observer.py: New proposed keywords (fixed).
+
+	* src/chimera/instruments/filterwheel.py:
+	* src/chimera/instruments/telescope.py:	Minor typo fixed.
+
 2007-07-04  P. Henrique Silva  <henrique@astro.ufsc.br>
 
 	* src/chimera/drivers/paramount.py: Added support for TheSky
